- Added password recovery services

--- a/src/main/resources/html-templates/recovery/password-recovery-failed.html
+++ b/src/main/resources/html-templates/recovery/password-recovery-failed.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Mail von FlavorMate</title>
+    <title>FlavorMate</title>
+    <link rel="icon" th:href="|${backendUrl}/icons/icon.png|" type="image/png"/>
     <style>
         :root {
             --primary: #8BC34A;
-
             --bg-secondary-light: #f2f4f6;
             --bg-secondary-dark: #28292a;
-
             --bg-primary-light: white;
             --bg-primary-dark: black;
-
             --font-primary-light: black;
             --font-primary-dark: white;
         }
 
         body {
-            margin: 0px;
+            margin: 0;
             font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
             line-height: 1.5;
         }
 
         @media (prefers-color-scheme: light) {
-            header,
-            footer {
+            header, footer {
                 background-color: var(--bg-secondary-light);
             }
 
@@ -34,15 +31,13 @@
                 background-color: var(--bg-primary-light);
             }
 
-            body,
-            .text-primary {
+            body, .text-primary {
                 color: var(--font-primary-light);
             }
         }
 
         @media (prefers-color-scheme: dark) {
-            header,
-            footer {
+            header, footer {
                 background-color: var(--bg-secondary-dark);
             }
 
@@ -50,14 +45,12 @@
                 background-color: var(--bg-primary-dark);
             }
 
-            body,
-            .text-primary {
+            body, .text-primary {
                 color: var(--font-primary-dark);
             }
         }
 
-        header,
-        footer {
+        header, footer {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -78,28 +71,17 @@
             font-weight: bold;
         }
 
-        .h3 {
-            font-size: 1.3em;
-        }
-
         .h4 {
             font-size: 1.25em;
         }
 
         .content {
+            height: calc(100dvh - 80px - 52px);
+            display: flex;
+            flex-direction: column;
             color: #74787e;
             max-width: 450px;
-        }
-
-        .btn {
-            background-color: var(--primary);
-            border: none;
-            border-radius: 8px;
-            padding: 16px;
-            margin-top: 4px;
-            margin-bottom: 4px;
-            color: white;
-            text-decoration: none;
+            overflow: auto;
         }
 
         p {
@@ -108,7 +90,6 @@
         }
     </style>
 </head>
-
 <body>
 <header>
     <img
@@ -118,39 +99,18 @@
     />
     <div class="h2">FlavorMate</div>
 </header>
-<main style="display: flex; justify-content: center">
-    <section class="content" style="display: flex; flex-direction: column">
-        <p><span class="h4 text-primary">Hallo [(${name})]</span>,</p>
-        <p>
-            vielen Dank für deine Mitteilung, dass du dein Passwort für den
-            Benutzernamen
-            <b class="text-primary" style="white-space: nowrap"
-            >@[(${username})]</b
-            >
-            vergessen hast.
-        </p>
-
-        <p>Falls du das nicht warst, kannst du diese Nachricht ignorieren.</p>
-        <p>
-            Bitte klicke auf folgenden Link, um ein neues Passwort zu erstellen:
-        </p>
-
-        <p style="align-self: center">
-            <a class="btn" th:href="|${backendUrl}/v2/self-service/recovery/password/reset/${token}|">
-                Passwort zurücksetzen
-            </a>
-        </p>
-
-        <p>
-            Hinweis: Dieser Link ist für 60 Minuten gültig. Mit freundlichen
-            Grüßen Dein FlavorMate Team.
-        </p>
-
-        <p>
-            Dies ist eine automatisch generierte Nachricht. Bitte antworte nicht
-            auf diese E-Mail.
-        </p>
-    </section>
+<main style="height: calc(100dvh - 80px - 52px - 32px); display: flex; justify-content: center; align-items: center;">
+    <form method="POST" th:action="|${backendUrl}/v2/self-service/recovery/password/reset/${token}|">
+        <section class="content">
+            <p>
+                <span class="h4 text-primary">Password could not be changed</span>
+            </p>
+            <p>
+                Something went wrong when trying to change your password. <br>
+                Please request a new reset token.
+            </p>
+        </section>
+    </form>
 </main>
 <footer>
     &copy; 2024
@@ -158,9 +118,7 @@
             href="https://flavormate.de"
             style="color: var(--primary); text-decoration: none"
             target="_blank"
-    >FlavorMate</a
-    >
-    All rights reserved.
+    >FlavorMate</a>
 </footer>
 </body>
 </html>
