--- a/src/main/resources/html-templates/bring.html
+++ b/src/main/resources/html-templates/bring.html
@@ -1,20 +1,138 @@
 <!DOCTYPE html>
-<html lang="de">
-
+<html lang="en">
 <head>
-    <title>[(${name})] von [(${author})]</title>
+    <meta charset="UTF-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>FlavorMate</title>
 
-    <meta http-equiv="Refresh" th:content="|0; url=${baseUrl}/public/${id}|"/>
+    <style>
+        :root {
+            --primary: #8BC34A;
 
-    <script th:utext="${json}" type="application/ld+json">
-    </script>
+            --bg-secondary-light: #f2f4f6;
+            --bg-secondary-dark: #28292a;
+
+            --bg-primary-light: white;
+            --bg-primary-dark: black;
+
+            --font-primary-light: black;
+            --font-primary-dark: white;
+        }
+
+        body {
+            margin: 0;
+            font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+            line-height: 1.5;
+        }
+
+        @media (prefers-color-scheme: light) {
+            header,
+            footer {
+                background-color: var(--bg-secondary-light);
+            }
+
+            main {
+                background-color: var(--bg-primary-light);
+            }
+
+            body,
+            .text-primary {
+                color: var(--font-primary-light);
+            }
+        }
+
+        @media (prefers-color-scheme: dark) {
+            header,
+            footer {
+                background-color: var(--bg-secondary-dark);
+            }
+
+            main {
+                background-color: var(--bg-primary-dark);
+            }
+
+            body,
+            .text-primary {
+                color: var(--font-primary-dark);
+            }
+        }
+
+        header,
+        footer {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 16px;
+            gap: 8px;
+        }
+
+        footer {
+            font-size: smaller;
+        }
+
+        main {
+            padding: 16px;
+        }
+
+        .h2 {
+            font-size: 1.5em;
+            font-weight: bold;
+        }
+
+        .h4 {
+            font-size: 1.25em;
+        }
+
+        .content {
+            color: #74787e;
+            max-width: 450px;
+        }
+
+        p {
+            margin-top: 8px;
+            margin-bottom: 8px;
+        }
+    </style>
+
+    <script th:utext="${json}" type="application/ld+json"></script>
 </head>
 
 <body>
-<p>
-    Du wirst gleich auf die Rezeptseite weitergeleitet...
-</p>
-<a th:href="|${baseUrl}/public/${id}|">Zum Rezept</a>
-</body>
+<header>
+    <img
+            alt="FlavorMate Logo"
+            style="width: 48px; height: 48px"
+            th:src="|${backendUrl}/icons/icon.png|"
+    />
+    <div class="h2">FlavorMate</div>
+</header>
+<main style="height: calc(100dvh - 80px - 52px - 32px); display: flex; justify-content: center; align-items: center;">
+    <section class="content" style="display: flex; flex-direction: column">
+        <p><span class="h4 text-primary">Ooops!</span></p>
 
+        <p>This site isn't meant to be visible for users.</p>
+        <p>It's a JSON-LD document.</p>
+
+        <p>But you can check out
+            <a href="https://flavormate.de" style="color: var(--primary); text-decoration: none" target="_blank">
+                FlavorMate
+            </a>
+            .
+        </p>
+
+
+    </section>
+</main>
+<footer>
+    &copy; 2024
+    <a
+            href="https://flavormate.de"
+            style="color: var(--primary); text-decoration: none"
+            target="_blank"
+    >
+        FlavorMate
+    </a>
+</footer>
+</body>
 </html>
+
