- Simplify HTML templates - Localize static texts

--- a/src/main/resources/html-templates/recovery/password-recovery-failed.html
+++ b/src/main/resources/html-templates/recovery/password-recovery-failed.html
@@ -1,124 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>FlavorMate</title>
-    <link rel="icon" th:href="|${backendUrl}/icons/icon.png|" type="image/png"/>
-    <style>
-        :root {
-            --primary: #8BC34A;
-            --bg-secondary-light: #f2f4f6;
-            --bg-secondary-dark: #28292a;
-            --bg-primary-light: white;
-            --bg-primary-dark: black;
-            --font-primary-light: black;
-            --font-primary-dark: white;
-        }
-
-        body {
-            margin: 0;
-            font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-            line-height: 1.5;
-        }
-
-        @media (prefers-color-scheme: light) {
-            header, footer {
-                background-color: var(--bg-secondary-light);
-            }
-
-            main {
-                background-color: var(--bg-primary-light);
-            }
-
-            body, .text-primary {
-                color: var(--font-primary-light);
-            }
-        }
-
-        @media (prefers-color-scheme: dark) {
-            header, footer {
-                background-color: var(--bg-secondary-dark);
-            }
-
-            main {
-                background-color: var(--bg-primary-dark);
-            }
-
-            body, .text-primary {
-                color: var(--font-primary-dark);
-            }
-        }
-
-        header, footer {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 16px;
-            gap: 8px;
-        }
-
-        footer {
-            font-size: smaller;
-        }
-
-        main {
-            padding: 16px;
-        }
-
-        .h2 {
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-
-        .h4 {
-            font-size: 1.25em;
-        }
-
-        .content {
-            height: calc(100dvh - 80px - 52px);
-            display: flex;
-            flex-direction: column;
-            color: #74787e;
-            max-width: 450px;
-            overflow: auto;
-        }
-
-        p {
-            margin-top: 8px;
-            margin-bottom: 8px;
-        }
-    </style>
-</head>
-<body>
-<header>
-    <img
-            alt="FlavorMate Logo"
-            style="width: 48px; height: 48px"
-            th:src="|${backendUrl}/icons/icon.png|"
-    />
-    <div class="h2">FlavorMate</div>
-</header>
-<main style="height: calc(100dvh - 80px - 52px - 32px); display: flex; justify-content: center; align-items: center;">
-    <form method="POST" th:action="|${backendUrl}/v2/self-service/recovery/password/reset/${token}|">
-        <section class="content">
-            <p>
-                <span class="h4 text-primary">Password could not be changed</span>
-            </p>
-            <p>
-                Something went wrong when trying to change your password. <br>
-                Please request a new reset token.
-            </p>
-        </section>
-    </form>
-</main>
-<footer>
-    &copy; 2024
-    <a
-            href="https://flavormate.de"
-            style="color: var(--primary); text-decoration: none"
-            target="_blank"
-    >FlavorMate</a>
-</footer>
-</body>
-</html>
+<section class="content">
+    <p class="h4 text-primary" th:text="#{html-password_recovery_failed-title}"></p>
+    <p>
+        [[#{html-password_recovery_failed-hint_1}]] <br>
+        [[#{html-password_recovery_failed-hint_2}]]
+    </p>
+</section>
