--- a/src/main/resources/html-templates/error.html
+++ b/src/main/resources/html-templates/error.html
@@ -1,147 +1,10 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>FlavorMate</title>
-    <style>
-        :root {
-            --primary: #8BC34A;
-
-            --bg-secondary-light: #f2f4f6;
-            --bg-secondary-dark: #28292a;
-
-            --bg-primary-light: white;
-            --bg-primary-dark: black;
-
-            --font-primary-light: black;
-            --font-primary-dark: white;
-        }
-
-        body {
-            margin: 0px;
-            font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-            line-height: 1.5;
-        }
-
-        @media (prefers-color-scheme: light) {
-            header,
-            footer {
-                background-color: var(--bg-secondary-light);
-            }
-
-            main {
-                background-color: var(--bg-primary-light);
-            }
-
-            body,
-            .text-primary {
-                color: var(--font-primary-light);
-            }
-        }
-
-        @media (prefers-color-scheme: dark) {
-            header,
-            footer {
-                background-color: var(--bg-secondary-dark);
-            }
-
-            main {
-                background-color: var(--bg-primary-dark);
-            }
-
-            body,
-            .text-primary {
-                color: var(--font-primary-dark);
-            }
-        }
-
-        header,
-        footer {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 16px;
-            gap: 8px;
-        }
-
-        footer {
-            font-size: smaller;
-        }
-
-        main {
-            padding: 16px;
-        }
-
-        .h2 {
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-
-        .h3 {
-            font-size: 1.3em;
-        }
-
-        .h4 {
-            font-size: 1.25em;
-        }
-
-        .content {
-            color: #74787e;
-            max-width: 450px;
-        }
-
-        .btn {
-            background-color: var(--primary);
-            border: none;
-            border-radius: 8px;
-            padding: 16px;
-            margin-top: 4px;
-            margin-bottom: 4px;
-            color: white;
-            text-decoration: none;
-        }
-
-        p {
-            margin-top: 8px;
-            margin-bottom: 8px;
-        }
-    </style>
-</head>
-
-<body>
-<header>
-    <img
-            alt="FlavorMate Logo"
-            style="width: 48px; height: 48px"
-            th:src="|${backendUrl}/icons/icon.png|"
-    />
-    <div class="h2">FlavorMate</div>
-</header>
-<main style="height: calc(100dvh - 80px - 52px - 32px); display: flex; justify-content: center; align-items: center;">
-    <section class="content" style="display: flex; flex-direction: column">
-        <p><span class="h4 text-primary">Ein Fehler ist aufgetreten!</span></p>
-        <p>
-            Bitte klicke auf den folgenden Button, um auf die Startseite zu gelangen:
-        </p>
+<section class="content">
+    <p class="h4 text-primary" th:text="#{html-error-title}"></p>
+    <div th:if="${frontendUrl != null}" th:remove="tag">
+        <p th:text="#{html-error-hint}"></p>
 
         <p style="align-self: center">
-            <a class="btn" th:href="|${frontendUrl}|">
-                Zu FlavorMate
-            </a>
+            <a class="btn" th:href="${frontendUrl}" th:text="#{html-error-open_flavormate}"></a>
         </p>
-
-
-    </section>
-</main>
-<footer>
-    &copy; 2024
-    <a
-            href="https://flavormate.de"
-            style="color: var(--primary); text-decoration: none"
-            target="_blank"
-    >FlavorMate</a
-    >
-</footer>
-</body>
-</html>
+    </div>
+</section>
