--- a/src/main/resources/html-templates/recovery/password-recovery.html
+++ b/src/main/resources/html-templates/recovery/password-recovery.html
@@ -1,186 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>FlavorMate</title>
-    <link rel="icon" type="image/png" th:href="|${backendUrl}/icons/icon.png|" />
-    <style>
-        :root {
-            --primary: #8BC34A;
-            --bg-secondary-light: #f2f4f6;
-            --bg-secondary-dark: #28292a;
-            --bg-primary-light: white;
-            --bg-primary-dark: black;
-            --font-primary-light: black;
-            --font-primary-dark: white;
-        }
-
-        body {
-            margin: 0;
-            font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-            line-height: 1.5;
-        }
-
-        @media (prefers-color-scheme: light) {
-            header, footer {
-                background-color: var(--bg-secondary-light);
-            }
-
-            main {
-                background-color: var(--bg-primary-light);
-            }
-
-            body, .text-primary {
-                color: var(--font-primary-light);
-            }
-        }
-
-        @media (prefers-color-scheme: dark) {
-            header, footer {
-                background-color: var(--bg-secondary-dark);
-            }
-
-            main {
-                background-color: var(--bg-primary-dark);
-            }
-
-            body, .text-primary {
-                color: var(--font-primary-dark);
-            }
-        }
-
-        header, footer {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 16px;
-            gap: 8px;
-        }
-
-        footer {
-            font-size: smaller;
-        }
-
-        main {
-            padding: 16px;
-        }
-
-        .h2 {
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-        
-        .h4 {
-            font-size: 1.25em;
-        }
-
-        .content {
-            height: calc(100dvh - 80px - 52px);
-            display: flex;
-            flex-direction: column;
-            color: #74787e;
-            max-width: 450px;
-            overflow: auto;
-        }
-
-        .input {
-            width: 100%;
-            border: solid 1px #ccc;
-            height: 24px;
-            border-radius: 8px;
-        }
-
-        .btn {
-            cursor: pointer;
-            width: 100%;
-            background-color: var(--primary);
-            border: none;
-            border-radius: 8px;
-            padding: 16px;
-            margin-top: 4px;
-            margin-bottom: 4px;
-            color: white;
-            text-decoration: none;
-            text-align: center;
-            display: inline-block;
-        }
-
-        .center-content {
-            align-self: center;
-            width: 250px;
-        }
-
-        .password-requirements {
-            align-self: center;
-            margin-right: 16px;
-        }
-
-        .toggle-password-label {
-            display: inline-block;
-            margin-top: 4px;
-        }
-
-        li {
-            padding-left: 16px;
-            list-style-type: "❌";
-        }
-
-        p {
-            margin-top: 8px;
-            margin-bottom: 8px;
-        }
-    </style>
-</head>
-<body>
-<header>
-    <img
-            alt="FlavorMate Logo"
-            style="width: 48px; height: 48px"
-            th:src="|${backendUrl}/icons/icon.png|"
-    />
-    <div class="h2">FlavorMate</div>
-</header>
-<main style="height: calc(100dvh - 80px - 52px - 32px); display: flex; justify-content: center; align-items: center;">
-    <form method="POST" th:action="|${backendUrl}/v2/self-service/recovery/password/reset/${token}|">
-        <section class="content">
-            <p>
-                <span class="h4 text-primary">Password reset</span>
-            </p>
-            <p>
-                Please enter your new password and confirm the request.<br>
-                Note: You have to meet the following criteria:
-                <ul class="password-requirements">
-                    <li id="bullet-length">Min. 8 characters</li>
-                    <li id="bullet-lowercase">Min. 1 lowercase letter</li>
-                    <li id="bullet-uppercase">Min. 1 uppercase letter</li>
-                    <li id="bullet-specialcase">Min. 1 special character</li>
-                    <li id="bullet-number">Min. 1 number</li>
-                </ul>
-            </p>
-            <p class="center-content">
-                <label for="password">New Password:</label>
-                <br>
-                <input class="input" id="password" name="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?=.*[0-9]).{8,}$" required
-                       type="password"/>
-                <input id="togglePassword" type="checkbox"><label class="toggle-password-label" for="togglePassword">Show
-                Password</label>
-            </p>
-            <p class="center-content">
-                <button class="btn" type="submit">Reset Password</button>
-            </p>
-        </section>
-    </form>
-</main>
-<footer>
-    &copy; 2024
-    <a
-            href="https://flavormate.de"
-            style="color: var(--primary); text-decoration: none"
-            target="_blank"
-    >FlavorMate</a>
-</footer>
-</body>
+<form method="POST" th:action="|${backendUrl}/v2/self-service/recovery/password/reset/${token}|">
+    <section class="content">
+        <p class="h4 text-primary" th:text="#{html-password_recovery-title}"></p>
+        <p>
+            [[#{html-password_recovery-hint_1}]]<br>
+            [[#{html-password_recovery-hint_2}]]
+            <ul class="password-requirements">
+                <li id="bullet-length" th:text="#{html-password_recovery-requirement_1}"></li>
+                <li id="bullet-lowercase" th:text="#{html-password_recovery-requirement_2}"></li>
+                <li id="bullet-uppercase" th:text="#{html-password_recovery-requirement_3}"></li>
+                <li id="bullet-specialcase" th:text="#{html-password_recovery-requirement_4}"></li>
+                <li id="bullet-number" th:text="#{html-password_recovery-requirement_5}"></li>
+            </ul>
+        </p>
+        <p class="center-content">
+            <label for="password" th:text="#{html-password_recovery-new_password}"></label>
+            <br>
+            <input class="input" id="password" name="password"
+                   pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?=.*[0-9]).{8,}$" required
+                   type="password"/>
+            <input id="togglePassword" type="checkbox">
+            <label class="toggle-password-label" for="togglePassword" th:text="#{html-password_recovery-show_password}"></label>
+        </p>
+        <p class="center-content">
+            <button class="btn" type="submit" th:text="#{html-password_recovery-save_password}"></button>
+        </p>
+    </section>
+</form>
 <script>
     const lengthRegex = new RegExp('^.{8,}$');
     const lowercaseRegex = new RegExp('^(?=.*[a-z]).+$');
@@ -235,4 +80,3 @@
         password.type = password.type === 'password' ? 'text' : 'password';
     });
 </script>
-</html>
