--- a/src/main/resources/mail-templates/password-recover.html
+++ b/src/main/resources/mail-templates/password-recover.html
@@ -1,166 +1,21 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Mail von FlavorMate</title>
-    <style>
-        :root {
-            --primary: #8BC34A;
+<section class="content">
+    <p class="h4 text-primary" th:text="#{html-password_recovery_mail-greeting_1(${name})}"></p>
+    <p th:utext="#{html-password_recovery_mail-greeting_2(#{html-password_recovery_mail-username(${username})})}"></p>
 
-            --bg-secondary-light: #f2f4f6;
-            --bg-secondary-dark: #28292a;
+    <p th:text="#{html-password_recovery_mail-not_you}"></p>
+    <p th:text="#{html-password_recovery_mail-hint_1}"></p>
 
-            --bg-primary-light: white;
-            --bg-primary-dark: black;
+    <p class="center-content">
+        <a class="btn"
+           th:href="|${backendUrl}/v2/self-service/recovery/password/reset/${token}?language=${#locale}|"
+           th:text="#{html-password_recovery_mail-reset_password}">
+        </a>
+    </p>
 
-            --font-primary-light: black;
-            --font-primary-dark: white;
-        }
+    <p>
+        <span th:text="#{html-password_recovery_mail-hint_2}"></span> <br>
+        <span th:text="#{html-password_recovery_mail-hint_3}"></span> <br>
+    </p>
 
-        body {
-            margin: 0px;
-            font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-            line-height: 1.5;
-        }
-
-        @media (prefers-color-scheme: light) {
-            header,
-            footer {
-                background-color: var(--bg-secondary-light);
-            }
-
-            main {
-                background-color: var(--bg-primary-light);
-            }
-
-            body,
-            .text-primary {
-                color: var(--font-primary-light);
-            }
-        }
-
-        @media (prefers-color-scheme: dark) {
-            header,
-            footer {
-                background-color: var(--bg-secondary-dark);
-            }
-
-            main {
-                background-color: var(--bg-primary-dark);
-            }
-
-            body,
-            .text-primary {
-                color: var(--font-primary-dark);
-            }
-        }
-
-        header,
-        footer {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 16px;
-            gap: 8px;
-        }
-
-        footer {
-            font-size: smaller;
-        }
-
-        main {
-            padding: 16px;
-        }
-
-        .h2 {
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-
-        .h3 {
-            font-size: 1.3em;
-        }
-
-        .h4 {
-            font-size: 1.25em;
-        }
-
-        .content {
-            color: #74787e;
-            max-width: 450px;
-        }
-
-        .btn {
-            background-color: var(--primary);
-            border: none;
-            border-radius: 8px;
-            padding: 16px;
-            margin-top: 4px;
-            margin-bottom: 4px;
-            color: white;
-            text-decoration: none;
-        }
-
-        p {
-            margin-top: 8px;
-            margin-bottom: 8px;
-        }
-    </style>
-</head>
-
-<body>
-<header>
-    <img
-            alt="FlavorMate Logo"
-            style="width: 48px; height: 48px"
-            th:src="|${backendUrl}/icons/icon.png|"
-    />
-    <div class="h2">FlavorMate</div>
-</header>
-<main style="display: flex; justify-content: center">
-    <section class="content" style="display: flex; flex-direction: column">
-        <p><span class="h4 text-primary">Hallo [(${name})]</span>,</p>
-        <p>
-            vielen Dank für deine Mitteilung, dass du dein Passwort für den
-            Benutzernamen
-            <b class="text-primary" style="white-space: nowrap"
-            >@[(${username})]</b
-            >
-            vergessen hast.
-        </p>
-
-        <p>Falls du das nicht warst, kannst du diese Nachricht ignorieren.</p>
-        <p>
-            Bitte klicke auf folgenden Link, um ein neues Passwort zu erstellen:
-        </p>
-
-        <p style="align-self: center">
-            <a class="btn" th:href="|${backendUrl}/v2/self-service/recovery/password/reset/${token}|">
-                Passwort zurücksetzen
-            </a>
-        </p>
-
-        <p>
-            Hinweis: Dieser Link ist für 60 Minuten gültig. Mit freundlichen
-            Grüßen Dein FlavorMate Team.
-        </p>
-
-        <p>
-            Dies ist eine automatisch generierte Nachricht. Bitte antworte nicht
-            auf diese E-Mail.
-        </p>
-    </section>
-</main>
-<footer>
-    &copy; 2024
-    <a
-            href="https://flavormate.de"
-            style="color: var(--primary); text-decoration: none"
-            target="_blank"
-    >FlavorMate</a
-    >
-    All rights reserved.
-</footer>
-</body>
-</html>
+    <p th:text="#{html-password_recovery_mail-hint_4}"></p>
+</section>
