- **Remove unused classes**: Delete `ScrapeResult`, `ImageDeserializer`, `ImageObject` - **Refactor ScrapeService**: Replace `ScrapeResult` with `SRecipe` - **Add new mapper**: Introduce `SRecipeMapper` for draft mappings - **Update deserializers**: Modify `SImageDeserializer` to handle string URLs - **Template enhancement**: Add recipe JSON script in `bring.html` - **Repository update**: Add `findByLabelAndLanguage` to `UnitLocalizedRepository`

--- a/src/main/resources/html-templates/bring.html
+++ b/src/main/resources/html-templates/bring.html
@@ -1,4 +1,6 @@
 <section class="content">
+  <script th:utext="${recipe}" type="application/ld+json"></script>
+
   <script th:utext="${json}" type="application/ld+json"></script>
 
   <p class="h4 text-primary" th:text="#{html-bring-title}"></p>
